# DyldExtractor

./: .gitignore  CStructConverter.py  ConverterExplanation.md  Explainations.md  LICENSE  README.md  Runner.py  dyld  extract_all_images.py  extractor.py  extractor2.py  kc  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
DyldExtractor/: ObjC.py  Structure.py  Uleb128.py  leb128.py
DyldExtractor/Converter/: LinkeditConverter.py  ObjCConvertor.py  OffsetConverter.py  SelectorConvertor.py  StubConverter.py  __init__.py
DyldExtractor/Dyld/: DyldFile.py  DyldStructs.py  __init__.py
DyldExtractor/MachO/: ExportTrie.py  MachoFile.py  MachoStructs.py  Writer.py  __init__.py
DyldExtractor/converter/: linkedit_optimizer.py  macho_offset.py  objc_fixer.py  slide_info.py  stub_fixer.py
DyldExtractor/dyld/: dyld_constants.py  dyld_context.py
DyldExtractor/macho/: macho_context.py
Notes/: DyldNotes.md  StubNotes.md
src/DyldExtractor/: cache_context.py  extraction_context.py  file_context.py  leb128.py  structure.py
src/DyldExtractor/builder/: linkedit_builder.py  pointer_tracker.py
src/DyldExtractor/converter/: chained_fixups.py  linkedit_optimizer.py  macho_offset.py  objc_fixer.py  rebase_generator.py  segment_fixer.py  slide_info.py  stub_fixer.py
src/DyldExtractor/dyld/: dyld_constants.py  dyld_context.py  dyld_structs.py  dyld_trie.py
src/DyldExtractor/kc/: kc_context.py
tests/: run_all_images.py  run_all_images_multiprocess.py  subCachesTest.py
(+6 files in other folders)
