[metadata]
name = dyldextractor
version = 1.0.6
author = arandomdev
author_email = haow6449@gmail.com
description = Extract Binaries from Apple's Dyld Shared Cache
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arandomdev/dyldextractor
project_urls =
    Bug Tracker = https://github.com/arandomdev/dyldextractor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
scripts =
    bin/dyldex
    bin/dyldex_all
packages = find:
python_requires = >=3.9.5

[options.packages.find]
where = src
